<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mandelbrot</string>
    <string name="julia_toggle">Julia mode</string>
    <string name="zoom_out">Zoom out</string>
    <string name="settings">Settings</string>
    <string name="color_scheme">Color scheme</string>
    <string name="save_image">Save image</string>
    <string name="reset">Reset</string>
    <string name="about">About…</string>

    <string name="button_render_simple">Simple rendering</string>
    <string name="button_render_gmp">Experimental rendering</string>
    <string name="desc_render_simple">Limited zoom (double precision), pan and zoom by swiping and pinching, Julia mode.</string>
    <string name="desc_render_gmp">Unlimited zoom (arbitrary precision using GMP), GPU accelerated, tap to zoom only, no panning, no Julia mode. For higher-performance devices.</string>

    <string name="power">Power:</string>
    <string name="iterations">Iterations:</string>
    <string name="color_map_scale">Color map scale:</string>
    <string name="coordinate_display">Real: %1$.15g to %2$.15g\nImag: %3$.15g to %4$.15g</string>
    <string name="coordinate_display_julia">Real: %1$.15g to %2$.15g\nImag: %3$.15g to %4$.15g\nJulia: %5$.15g to %6$.15g</string>
    <string name="folder_picker_instruction">Select folder where image will be saved.</string>
    <string name="picture_save_success">Picture saved successfully: %1$s</string>
    <string name="picture_save_error">Error saving picture: %1$s</string>
    <string name="picture_save_permissions">Please grant write permissions to save the image.</string>
    <string name="str_about">- Hold and drag to move\n- Pinch to zoom in/out\n- Press the Settings button or Volume up/down to change iterations\n- Press the Julia Mode button to enable the Julia window. Drag and zoom within the Julia or Mandelbrot windows to explore.\n\nCopyright © 2015+ Dmitry Brant.</string>
    <string name="str_about_gmp">- Tap to zoom in\n- Toolbar button to zoom out\n- Settings button to change iterations and colors\n\nCopyright © 2025+ Dmitry Brant.</string>
</resources>
